--- a/views/teste.html
+++ b/views/teste.html
@@ -11,7 +11,7 @@
     <body>
         <div class="sitecontainer">
             <div class="pagewidth">
-                <div style="box-shadow:0 2px 2px 1px #111;background:#222;">
+                <div class="row" style="box-shadow:0 2px 2px 1px #111;background:#222;">
                     <div class="mylogo pull-left">
                         <span class="codeitem">&lt;</span><span class="mylogoname">GiovanneAfonso</span><span class="codeitem">&gt;</span>
                     </div>
@@ -47,8 +47,114 @@
                 
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="sitecontent">
-                            haa
+                        <div class="sitecontent row">
+                            <div class="col-lg-5 sidebar">
+                                <div class="row">
+                                    <div class="sideheader">
+                                        Skill List
+                                    </div>
+                                    
+                                    <div class="col-lg-12">
+                                        
+                                        <div class="skill-title">Languages</div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">PHP (OO)</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-success" style="width:100%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">HTML5</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-success" style="width:100%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">CSS3</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-info" style="width:70%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">Python</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-warning" style="width:50%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">Java</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-warning" style="width:45%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        <div class="skill-title">Frameworks</div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">jQuery</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-success" style="width:100%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">Bootstrap</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-success" style="width:100%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">Kohana</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-success" style="width:99%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        <div class="skill-item">
+                                            <div class="skill-name">AngularJS</div>
+                                            <div class="skill-progress">
+                                                <div class="progress progress-striped active">
+                                                  <div class="progress-bar progress-bar-success" style="width:90%"></div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        
+                                        
+                                        
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
