--- a/views/teste.html
+++ b/views/teste.html
@@ -10,8 +10,9 @@
     
     <body>
         <div class="sitecontainer">
-            <div class="pagewidth">
-                <div class="row" style="box-shadow:0 2px 2px 1px #111;background:#222;">
+            
+            <div class="pageheader">
+                <div class="pagewidth">
                     <div class="mylogo pull-left">
                         <span class="codeitem">&lt;</span><span class="mylogoname">GiovanneAfonso</span><span class="codeitem">&gt;</span>
                     </div>
@@ -25,11 +26,14 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                
+            </div>
+            
+            
+            <div class="pagewidth">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="impactsupport">
-                            <div class="impactwords">
+                            <div class="impactwords photo-frame-front">
                                 <span style="font-size:50px;line-height:80px;">
                                     I'm a
                                 </span>
@@ -191,7 +195,7 @@
                             
                             <div class="col-lg-7 pull-right">
                                 <div class="row bodycontent-row">
-                                    <div class="col-lg-12 bodycontent">
+                                    <div class="col-lg-12 bodycontent photo-frame">
                                         <div class="row bodytitle">
                                             <div class="col-lg-12">
                                                 <h1>Desenvolvo sistemas para web</h1>
@@ -200,7 +204,7 @@
                                         </div>
                                         
                                         <div class="panel panel-default">
-                                            <div class="panel-heading">Desenvolvo sistemas para web</div>
+                                            <!--<div class="panel-heading">Desenvolvo sistemas para web</div>-->
                                             <div class="panel-body">
                                                 <div class="row">
                                                     <div class="col-lg-4">
@@ -215,15 +219,25 @@
                                                         da computação na época) me levar a dar o primeiro passo com HTML, CSS e Javascript.</p>
                                                         
                                                         <hr>
-                                                        
+                                                    </div>
+                                                    <div class="clearfix"></div>
+                                                    <div class="col-lg-12">
                                                         <h4>Formação</h4>
                                                         <p class="abt-text">
                                                             <ul>
                                                                 <li> <strong>Ciencia da computação</strong><br>
-                                                                    <i><small>Uninorte<br>Cursando 1. período</small></i>
+                                                                    <i><small>
+                                                                        Uninorte - Universidade do Norte
+                                                                        <br>
+                                                                        Cursando 1. período
+                                                                    </small></i>
                                                                     
                                                                 <li> <strong>Engenharia da computação</strong><br>
-                                                                    <i><small>UNIP<br>Trancada no 2. período (Motivo: viagem)</small></i>
+                                                                    <i><small>
+                                                                        UNIP - Universidade Paulista
+                                                                        <br>
+                                                                        Trancada no 2. período (Motivo: viagem)
+                                                                    </small></i>
                                                             </ul>
                                                         </p>
                                                         
@@ -256,6 +270,11 @@
                                             </div>
                                         </div>
                                         
+                                        <div data-descricao=" * IDÉIA PARA CONTINUAR DESENVOLVENDO O SITE * " style="overflow:hidden;"><div style="margin-left:-5px;">
+                                            <div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/pt_BR/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
+                                            <div class="fb-post" data-href="https://www.facebook.com/shakegioh/posts/427232694049075" data-width="550"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/shakegioh/posts/427232694049075">Publicação</a> by <a href="https://www.facebook.com/shakegioh">Giovanne Afonso</a>.</div></div>
+                                        </div></div>
+                                        
                                         <div class="clearfix"></div>
                                     </div>
                                 </div>
@@ -266,10 +285,24 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="clearfix"></div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
+                </div><!-- row -->
+            </div><!-- pagewidth -->
             <div class="clearfix"></div>
+            
+            <footer id="pagefooter">
+                <div id="pagefooter_inner">
+                    <div class="pagewidth">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                col 1
+                            </div>
+                            <div class="col-lg-6">
+                                col 2
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
