--- a/views/teste.html
+++ b/views/teste.html
@@ -31,7 +31,7 @@
             
             <div class="pagewidth">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <!--<div class="col-lg-12">-->
                         <div class="impactsupport">
                             <div class="impactwords photo-frame-front">
                                 <span style="font-size:50px;line-height:80px;">
@@ -46,12 +46,12 @@
                                 </span>
                             </div>
                         </div>
-                    </div>
+                    <!--</div>-->
                 </div>
                 
                 <div class="row">
                     <div class="col-lg-12 sitecontentbg">
-                        <div class="sitecontent row">
+                        <div class="sitecontent row photo-frame">
                             <div class="col-lg-5 sidebar pull-left">
                                 <div class="row">
                                     <div class="col-lg-12">
@@ -195,13 +195,13 @@
                             
                             <div class="col-lg-7 pull-right">
                                 <div class="row bodycontent-row">
-                                    <div class="col-lg-12 bodycontent photo-frame">
-                                        <div class="row bodytitle">
+                                    <div class="col-lg-12 bodycontent">
+                                        <!--div class="row bodytitle">
                                             <div class="col-lg-12">
                                                 <h1>Desenvolvo sistemas para web</h1>
                                             </div>
                                             <div class="clearfix"></div>
-                                        </div>
+                                        </div-->
                                         
                                         <div class="panel panel-default">
                                             <!--<div class="panel-heading">Desenvolvo sistemas para web</div>-->
@@ -293,11 +293,10 @@
                 <div id="pagefooter_inner">
                     <div class="pagewidth">
                         <div class="row">
-                            <div class="col-lg-6">
-                                col 1
-                            </div>
-                            <div class="col-lg-6">
-                                col 2
+                            <div class="col-lg-12">
+                                <div style="text-align:center;color:#666;">
+                                    Site criado por Giovanne Afonso
+                                </div>
                             </div>
                         </div>
                     </div>
