--- a/views/teste.html
+++ b/views/teste.html
@@ -31,7 +31,7 @@
             
             <div class="pagewidth">
                 <div class="row">
-                    <!--<div class="col-lg-12">-->
+                    <!--<div class="col-md-12">-->
                         <div class="impactsupport">
                             <div class="impactwords photo-frame-front">
                                 <span style="font-size:50px;line-height:80px;">
@@ -50,17 +50,17 @@
                 </div>
                 
                 <div class="row">
-                    <div class="col-lg-12 sitecontentbg">
+                    <div class="col-md-12 sitecontentbg">
                         <div class="sitecontent row photo-frame">
-                            <div class="col-lg-5 sidebar pull-left">
+                            <div class="col-md-5 sidebar pull-left">
                                 <div class="row">
-                                    <div class="col-lg-12">
+                                    <div class="col-md-12">
                                         <div class="skill-list">
                                             <div class="sideheader">
                                                 Skill List
                                             </div>
                                             
-                                            <div class="col-lg-12">
+                                            <div class="col-md-12">
                                                 
                                                 <div class="skill-title">Languages</div>
                                                 
@@ -184,7 +184,7 @@
                                 </div><!-- skill-list -->
                                 
                                 <div class="row">
-                                    <div class="col-lg-12">
+                                    <div class="col-md-12">
                                         <a href="http://br.phptherightway.com" target="_blank">
                                             <img src="http://www.phptherightway.com/images/banners/med-rect-300x250.png" alt="PHP: Do Jeito Certo" style="width:100%;border:1px dotted #999;"/>
                                         </a>
@@ -193,11 +193,11 @@
                                 <div class="clearfix"></div>
                             </div><!-- sidebar -->
                             
-                            <div class="col-lg-7 pull-right">
+                            <div class="col-md-7 pull-right">
                                 <div class="row bodycontent-row">
-                                    <div class="col-lg-12 bodycontent">
+                                    <div class="col-md-12 bodycontent">
                                         <!--div class="row bodytitle">
-                                            <div class="col-lg-12">
+                                            <div class="col-md-12">
                                                 <h1>Desenvolvo sistemas para web</h1>
                                             </div>
                                             <div class="clearfix"></div>
@@ -207,11 +207,11 @@
                                             <!--<div class="panel-heading">Desenvolvo sistemas para web</div>-->
                                             <div class="panel-body">
                                                 <div class="row">
-                                                    <div class="col-lg-4">
+                                                    <div class="col-md-4">
                                                         <img src="http://www.gravatar.com/avatar/0fa488c2da058955f29c7bba683409fb?s=150" class="img-thumbnail">
                                                     </div>
                                                     
-                                                    <div class="col-lg-8">
+                                                    <div class="col-md-8">
                                                         <h4>Resumo sobre mim</h4>
                                                         <p class="abt-text">
                                                         Comecei a estudar programação com 12 anos de idade. Eu já nasci com vontade de programar,
@@ -221,7 +221,7 @@
                                                         <hr>
                                                     </div>
                                                     <div class="clearfix"></div>
-                                                    <div class="col-lg-12">
+                                                    <div class="col-md-12">
                                                         <h4>Formação</h4>
                                                         <p class="abt-text">
                                                             <ul>
@@ -293,9 +293,37 @@
                 <div id="pagefooter_inner">
                     <div class="pagewidth">
                         <div class="row">
-                            <div class="col-lg-12">
-                                <div style="text-align:center;color:#666;">
+                            <div class="col-sm-12">
+                                <div style="text-align:center;color:#444;margin-bottom:20px;">
                                     Site criado por Giovanne Afonso
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="row">
+                            <div class="col-md-7">
+                                <h3>Um pouco mais...</h3>
+                                <div>
+                                    <p>
+                                    Estou sempre procurando evoluir em todas as áreas da minha vida,
+                                    gosto de fazer coisas diferentes e gosto de desafios. Cada dia
+                                    que se passa meu emprego e a faculdade me ajudam a evoluir ainda
+                                    mais e é incrível como cada ano que passa a diferença é tão grande!
+                                    Olho pra trás e vejo quem eu era e quem sou agora e tenho orgulho
+                                    de quem estou me tornando. Um dia só vale a pena quando você dorme
+                                    melhor do que acordou.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <h3>Objetivos futuros</h3>
+                                <div>
+                                    <p>
+                                    Quero ter minha própria empresa, gerenciar uma grande equipe e deixar
+                                    o mundo um pouco melhor com a minha vida. Afinal, para que vivemos se não
+                                    para fazer a vida ser bela? Eu não quero apenas viver para mim mesmo,
+                                    quero viver e propagar a minha visão do mundo.
+                                    </p>
                                 </div>
                             </div>
                         </div>
