--- a/public/css/base.css
+++ b/public/css/base.css
@@ -12,13 +12,25 @@ width:100%;
 height:auto;
 }
 .pageheader {
+position:fixed;
+top:0;left:0;
+width:100%;
+z-index:9999;
 //background:url(http://www.allegra.com/hcp/Images/header_background1-1.png) center top no-repeat transparent;
-background:url(../img/headerbg.png) center top no-repeat transparent;
+//background:url(../img/headerbg.png) center top no-repeat transparent;
 background:transparent;
+background:url(http://www.walkerskicks.com/images/black%20transparent.png);
+background-size:100%;
+box-shadow:0 2px 5px 1px #111;
+/*
 box-shadow: inset 0 50px 150px 0 #000,
             inset 0 -30px 100px 0 #000,
             0 3px 10px 1px #111;
-//box-shadow:0 2px 2px 1px #111;
+*/
+}
+.pageheader_margin {
+display:block;
+padding-top:80px;
 }
 .sitecontentbg {
 /*
@@ -53,6 +65,7 @@ margin:0;padding:0;
 margin-top:-5px;
 height:70px;
 color:#CCF;
+font-family:'Cookie';
 font-size:26px;
 font-weight:bold;
 text-shadow:0 2px 5px #000;
@@ -69,6 +82,7 @@ line-height:70px;
 display:block;
 padding:10px 0 30px;
 color:#FFF;
+font-family:'Cookie';
 text-align:center;
 text-shadow:0 2px 5px #000;
 }
@@ -86,7 +100,7 @@ border-bottom:0;
 
 #topmenu {
 display:block;
-margin:0px;padding:0;
+margin:0;padding:0;
 list-style:none;
 }
 #topmenu > li {
@@ -96,7 +110,8 @@ display:inline-block;
 display:block;
 width:100px;
 color:#CCC;
-font-size:18px;
+font-family:'Cookie';
+font-size:22px;
 text-align:center;
 text-decoration:none;
 line-height:70px;
@@ -105,18 +120,30 @@ text-shadow:1px 1px 1px #000;
 #topmenu > li > a:hover, #topmenu > li > a:focus {
 color:#FFF;
 background:#202020;
+/*
 box-shadow: inset 0 25px 3px rgba(255,255,255,0.1), 
             inset 0 -15px 30px rgba(0,0,0,0.4),
             0 5px 10px rgba(0,0,0,0.5);
+*/
+box-shadow: 0 0 0 2px #222;
+background:url(../img/menubg-over.png);
+background-size: 100% 70px;
 }
+
 .current_topmenu > a,
 .current_topmenu > a:hover,
 .current_topmenu > a:focus {
 //background:#111;
+/*
 box-shadow: inset 0 25px 3px rgba(255,255,255,0.1), 
             inset 0 -15px 30px rgba(0,0,0,0.4),
             0 5px 10px rgba(0,0,0,0.5);
-background:#111;
+*/
+
+box-shadow: 0 0 0 2px #111;
+background:url(../img/menubg.png);
+background-size: 100% 70px;
+
 color:#FFF !important;
 }
 
@@ -197,6 +224,8 @@ text-align:justify;
 }
 
 
+
+/*
 .photo-frame, .photo-frame-front {
 position:relative;
 }
@@ -205,7 +234,7 @@ position:relative;
 /*==========================================================
  * http://www.webtutorialplus.com/glass-effects-with-css/
  *==========================================================
- */
+ * /
 content: "";
 display: block;
 position: absolute;
@@ -213,20 +242,11 @@ right:0;
 left:0;
 top:0;
 bottom:0;
-/*
-width: 520px;
-height: 300px;
-*/
 border-radius: 10px;
 background-color: rgba(0,0,0,0.1); 
 box-shadow: inset 0 50px 10px rgba(255,255,255,0.1), 
             inset 0 -15px 30px rgba(0,0,0,0.4),
             0 5px 10px rgba(0,0,0,0.5);
-/*-moz-transform: translate(-15px, -285px);
--webkit-transform: translate(-15px, -285px);
--o-transform: translate(-15px, -285px);
--ms-transform: translate(-15px, -285px);
-transform: translate(-15px, -285px);*/
 z-index:-1;
 }
 .photo-frame-front:after {
@@ -243,7 +263,7 @@ box-shadow: inset 0 50px 10px rgba(255,255,255,0.2),
             inset 0 -15px 30px rgba(0,0,0,0.4),
             0 5px 10px rgba(0,0,0,0.5);
 }
-
+*/
 
 
 
