--- a/views/teste.html
+++ b/views/teste.html
@@ -5,6 +5,7 @@
         <title>Giovanne Afonso</title>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Cookie">
         <link rel="stylesheet" href="/static/css/base.css">
     </head>
     
@@ -29,7 +30,7 @@
             </div>
             
             
-            <div class="pagewidth">
+            <div class="pageheader_margin pagewidth">
                 <div class="row">
                     <!--<div class="col-md-12">-->
                         <div class="impactsupport">
@@ -331,5 +332,11 @@
                 </div>
             </footer>
         </div>
+
+
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="/static/js/base.js"></script>
+
     </body>
 </html>
