--- a/public/static/css/base.less.css
+++ b/public/static/css/base.less.css
@@ -1,13 +1,14 @@
 @theme-title-color: #F70;
 @theme-title-font: 'Cookie';
 @topmenu-height: 70px;
+@pf-page-border-color: #EEE;
 
 .theme-font (@font: @theme-title-font) {
     font-family: @font;
 }
 
 .background-black-transparent () {
-    background:url(http://www.walkerskicks.com/images/black%20transparent.png);
+    background:url(../img/black%20transparent.png);
     background-size:100%;
 }
 
@@ -18,8 +19,12 @@
     color:@theme-title-color;
 }
 
+.inpad {
+    padding:15px;
+}
+
 body {
-background: url(http://www.digimurai.com/revolution/img/bgr.jpg) top center no-repeat #101620;
+background: url(../img/bgr.jpg) top center no-repeat #101620;
 }
 ::selection  {
 background:#DDF;
@@ -220,7 +225,7 @@ font-size:32px;
 #mytopresume {
 padding:15px;
 background:#f7f7ff;
-background:url(http://www.designbolts.com/wp-content/uploads/2012/12/White-Gradient-Squares-Seamless-Patterns-For-Website-Backgrounds.jpg);
+background:url(../img/White-Gradient-Squares-Seamless-Patterns-For-Website-Backgrounds.jpg);
 border:5px solid #FFF;
 border-radius:5px;
 color:#333;
@@ -250,11 +255,11 @@ color:#FFF;
 
 #pagefooter {
 display:block;
-background: url(http://www.digimurai.com/revolution/img/footer-bgr-tile.jpg) left top repeat-x;
+background: url(../img/footer-bgr-tile.jpg) left top repeat-x;
 }
 #pagefooter_inner {
 padding-top:20px;
-background: url(http://www.digimurai.com/revolution/img/footer-bgr-img.jpg) center bottom no-repeat;
+background: url(../img/footer-bgr-img.jpg) center bottom no-repeat;
 min-height:280px;
 color:#777;
 }
@@ -285,13 +290,20 @@ color:#BBB;
     .background-black-transparent;
     box-shadow:0 0 3px 2px #000;
 }
+.portfolio-hover {
+    &:hover {
+        cursor:pointer;
+        background:#000;
+        box-shadow: 0 0 3px 2px #333;
+    }
+}
 
 .pf-img .img-thumbnail {
     width:100%;
     min-height:250px;
 }
 
-.portfolio-item h2 {
+.portfolio-item h2, .portfolio-item h1 {
     margin:0;
     padding:0;
     line-height:1em;
@@ -317,66 +329,43 @@ color:#BBB;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-body {
-    
-}
-.overitem {
-    display:none;
-    position:fixed;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    .background-black-transparent;
-    z-index:99999999999;
-}
-.overitem .row {
-    position:relative;
-}
-.overitem .row > div {
-    padding:15px;
-}
-.oi-body {
-    overflow:hidden;
-    overflow-y:scroll;
-    position:absolute;
-    top:@topmenu-height;
-    left:0;right:0;bottom:0;
-    padding:0 15px;
+.sp-content {
+    margin-top:-15px;
+    margin-bottom:15px;
+    background:#FFF;
+    min-height:500px;
+    box-shadow: 0 0 3px 2px #000;
+    border-bottom:15px solid #000;
     font-size:16px;
 }
-.oi-header {
-    height: @topmenu-height;
-    background:#FFF;
-    border-bottom:1px solid #bbb;
-    margin:0;padding:0;
-    overflow-y:scroll;
+
+.sp-page {
+    margin-bottom: 15px;
+    padding-bottom:80px;
+    background: url("http://mobileprovider.com.br/resources/img/separator.png") center bottom no-repeat transparent;
+    background-size: 100% 12px;
+    max-width: 644px;
 }
-.oi-header h2 {
-    margin:0;
-    padding:0;
-}
-.oi-content {
-    background:#FFF;
-    min-height:600px;
-}
-.oi-sidebar {
-    background:url(../img/gray.png);
-    min-height:100%;
-    position:absolute;
+.sp-page-content {
+    margin-left:30px;
 }
 
-.oi-about p {
-    margin-left:30px;
+.sp-title {
+    .theme-title-font;
+    .theme-title-color;
+    text-shadow:1px 1px #000;
+    font-size:64px;
+}
+
+
+
+
+
+.content_separator {
+    display:block;
+    margin:100px 0 30px;
+    height:16px;
+    background: url("http://mobileprovider.com.br/resources/img/separator.png") center top no-repeat transparent;
+    background-size:100% 12px;
+    clear:both;
 }
