--- a/public/static/css/base.less.css
+++ b/public/static/css/base.less.css
@@ -369,3 +369,45 @@ color:#BBB;
     background-size:100% 12px;
     clear:both;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// http://bradsknutson.com/blog/css3-rollover-social-media-icons/
+.social-slide (@url) {
+    display:block;
+	background-image: url(@url);
+	height: 48px;
+	width: 48px;
+	margin: 10px;
+	float: left;
+	-webkit-transition: all ease 0.3s;
+	-moz-transition: all ease 0.3s;
+	-o-transition: all ease 0.3s;
+	-ms-transition: all ease 0.3s;
+	transition: all ease 0.3s;
+    
+    &:hover {
+        cursor:pointer;
+        background-position: 0px -48px;
+        box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.8);
+    }
+}
+
+.social-slide-facebook {
+    .social-slide('http://bradsknutson.com/wp-content/themes/bradsknutson/images/facebook-hover.png');
+}
+.social-slide-linkedin {
+    .social-slide('http://bradsknutson.com/wp-content/themes/bradsknutson/images/linkedin-hover.png');
+}
